--- a/trello-slack.cfg.sample
+++ b/trello-slack.cfg.sample
@@ -30,7 +30,7 @@ BOARD_BRAINSTORMING = "vBqLThGO"
 CHANNEL_HEARTBEAT = "#heartbeat"
 
 # This is the main configuration section. For each board, specify which lists
-# you want to monitor, and which HipChat room notifications must be sent to.
+# you want to monitor, and which Slack channels notifications must be sent to.
 # List names are specified with wildcars, so just use "*" to monitor all the lists.
 MONITOR = [
 	( BOARD_MAIN,
